--wip-- [skip ci]

--- a/test/data.html
+++ b/test/data.html
@@ -10,6 +10,43 @@
 	<!-- Date: 2008-12-17 -->
 </head>
 <body>
-  <h1 id="title">This is the title</h1>
+    <h1 id="title">This is the title</h1>
+    <table>
+        <tr class="thead">
+            <td>
+                <table>
+                    <tr>
+                        <td>0.1</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>0.2</td>
+                        <td></td>
+                    </tr>
+               </table>
+            </td>
+            <td></td>
+        </tr>
+        <tr class="c1">
+            <td>1</td>
+            <td></td>
+        </tr>
+        <tr class="c1">
+            <td>2</td>
+            <td></td>
+        </tr>
+        <tr class="c1">
+            <td>3</td>
+            <td></td>
+        </tr>
+        <tr class="c1">
+            <td>4</td>
+            <td></td>
+        </tr>
+        <tr class="c1">
+            <td>5</td>
+            <td></td>
+        </tr>
+    </table>
 </body>
 </html>
